# netop

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: docker.yml  publish.yml  rust-clippy.yml
deploy/: Dockerfile
snap/: snapcraft.yaml
src/: app.rs  main.rs  runner.rs  ui.rs
