[package]
name = "netop"
version = "0.1.1"
edition = "2021"
categories = ["network-programming", "command-line-interface"]
keywords = ["cli", "network", "traffic", "statistics", "pcap"]
homepage = "https://github.com/ZingerLittleBee/netop"
repository = "https://github.com/ZingerLittleBee/netop"
description = "netop is a terminal command line interface that can customize the filter network traffic rule 🎯"
readme = "README.md"
license = "MIT"
exclude = ["snapshot", "deploy", ".github", "renovate.json"]

[dependencies]
netraffic = "0.1.0"
tui = "0.19"
crossterm = "0.25"
chrono = "0.4"
clap = { version = "4.3.1", features = ["derive"] }